[debugger] Don't collect 'this' for the scope inspector

It's already added somewhere else, and otherwise it shows up twice. We only
need to collect it for DebugEvaluate.

Bug: chromium:921339
Change-Id: I8e8890ecf19e0c7d1196c32e9358962c984001da
Reviewed-on: https://chromium-review.googlesource.com/c/1414851
Reviewed-by: Yang Guo <yangguo@chromium.org>
Commit-Queue: Toon Verwaest <verwaest@chromium.org>
Cr-Commit-Position: refs/heads/master@{#58844}